--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
         "start": "node ./src/main.js"
     },
     "dependencies": {
-        "express": "^4.18.2",
-        "mysql": "^2.18.1",
-        "dotenv": "^16.3.1",
         "argon2": "^0.31.0",
-        "jsonwebtoken": "^9.0.1"
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.1",
+        "mysql": "^2.18.1"
     }
 }
